--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: work
 email: anastasia.aizman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  An unordered stream of projects
+  A stream of projects & thoughts
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
