--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anastasia
 
-include: ["_projects"]
+include: ["_projects", "_tags"]
 
 # Build settings
 markdown: kramdown
