--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "?"
 email: anastasia.aizman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A stream of projects & thoughts
+  A small stream of projects & thoughts
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://anastasia.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anastasia
