sam checking in some work

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ collections:
     output: true
     permalink: /:collection/:path
     layout: project
+  icons:
+    output: true
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
