--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "?"
-email: anastasia.aizman@gmail.com
+email: aizman@mit.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  projects & thoughts
+  Anastasia Aizman
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://anastasia.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anastasia
